RESOLVED FIXED104392
REGRESSION (r136770): Assertion failure in sendMessage() whenever WebProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=104392
Summary REGRESSION (r136770): Assertion failure in sendMessage() whenever WebProcess ...
Alexey Proskuryakov
Reported 2012-12-07 12:43:08 PST
Accidentally changed one instance of m_connection to connection(), but connection() asserts that the connection is not null.
Attachments
proposed fix (1.22 KB, patch)
2012-12-07 12:44 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2012-12-07 12:44:55 PST
Created attachment 178259 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-12-07 12:48:13 PST
Note You need to log in before you can comment on or make changes to this bug.