        REGRESSION (r136770): Assertion failure in sendMessage() whenever WebProcess crashes         https://bugs.webkit.org/show_bug.cgi?id=104392

Reviewed by Anders Carlsson.

        * Shared/ChildProcessProxy.cpp: (WebKit::ChildProcessProxy::sendMessage): Changed
        back to using m_conection where it can be null.



Canonical link: https://commits.webkit.org/122547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136973 268f45cc-cd09-0410-ab3c-d52691b4dbfc